# oca-account-payment

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
account_cash_invoice/i18n/: it.po
account_due_list/: README.rst  __manifest__.py
account_due_list/i18n/: it.po  tr.po
account_due_list/static/description/: index.html
account_due_list/views/: payment_view.xml
account_payment_promissory_note/: README.rst  __manifest__.py
account_payment_promissory_note/i18n/: account_payment_promissory_note.pot  it.po  tr.po
account_payment_promissory_note/readme/: CONTRIBUTORS.rst
account_payment_promissory_note/tests/: test_account_payment_promissory_note.py
account_payment_promissory_note/wizard/: account_register_payments.py
account_payment_return_import_iso20022/i18n/: it.po
account_payment_term_security/: README.rst  __manifest__.py
account_payment_term_security/i18n/: account_payment_term_security.pot  es.po  it.po
account_payment_term_security/models/: account_move.py  res_partner.py
account_payment_term_security/readme/: CONFIGURE.md  DESCRIPTION.md
account_payment_term_security/tests/: test_account_payment_term_security.py
sale_payment_term_security/: README.rst  __manifest__.py
sale_payment_term_security/i18n/: it.po  sale_payment_term_security.pot
sale_payment_term_security/models/: sale_order.py
sale_payment_term_security/readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md
sale_payment_term_security/tests/: test_sale_payment_term_security.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+3 files in other folders)
